# PicConverter

./: .gitignore  CHANGELOG.md  README.en.md  README.md  picconverter.desktop  picconverter_cli.py  picconverter_core.py  picconverter_gui.py  picconverter_i18n.py  pyproject.toml  requirements-build.txt  requirements.txt
.github/workflows/: release.yml  tests.yml
tests/: conftest.py  test_cli.py  test_core.py
