[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "picconverter"
version = "3.2.0"
description = "Bild- & PDF-Konverter mit moderner GUI (Qt/PySide6) und CLI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "0xGI0" }]
keywords = ["image", "converter", "pdf", "svg", "exif", "gui", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "Pillow>=10.0",
    "PySide6>=6.6",
]

[project.optional-dependencies]
pdf = ["PyMuPDF>=1.24"]  # deckt auch die SVG-Eingabe ab
heif = ["pillow-heif>=0.16"]
all = ["PyMuPDF>=1.24", "pillow-heif>=0.16"]
dev = ["pytest>=8", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/0xGI0/PicConverter"
Issues = "https://github.com/0xGI0/PicConverter/issues"

[project.scripts]
picconverter = "picconverter_cli:main"

[project.gui-scripts]
picconverter-gui = "picconverter_gui:main"

[tool.setuptools]
py-modules = ["picconverter_core", "picconverter_cli", "picconverter_gui",
              "picconverter_i18n"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
ignore = ["E741"]
